[project]
name = "hanadoc-toolchain"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cel-ti", email = "96926560+cel-ti@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.7",
    "toml>=0.10.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

hanadoc = "hanadoc_toolchain.__main__:hanadoc"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hanadoc_toolchain"]

